--- a/package.json
+++ b/package.json
@@ -18,5 +18,9 @@
         "lodash": "^4.17.5",
         "popper.js": "^1.12",
         "vue": "^2.5.17"
+    },
+    "dependencies": {
+        "bootstrap-datepicker": "^1.8.0",
+        "jquery-ui-bundle": "^1.12.1-migrate"
     }
 }
