--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,7 @@
         "laracasts/flash": "^3.0",
         "laravel/framework": "5.7.*",
         "laravel/tinker": "^1.0",
+        "laravelcollective/html": "^5.4.0",
         "prettus/l5-repository": "^2.6"
     },
     "require-dev": {
